// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spellEffectsValues > damage and heal values 1`] = `
[
  [
    {
      "base": 50,
      "className": "Percent10ScaleValue",
    },
  ],
  [
    {
      "base": 30,
      "className": "Percent10ScaleValue",
    },
  ],
]
`;

exports[`spellEffectsValues > damage with effectiveness values 1`] = `
[
  [
    {
      "base": 25,
      "className": "Percent10ScaleValue",
    },
    {
      "base": 40,
      "className": "Percent10ScaleValue",
    },
  ],
]
`;

exports[`spellEffectsValues > heal value followed by valueless movement 1`] = `
[
  [
    {
      "base": 35,
      "className": "Percent10ScaleValue",
    },
  ],
  [],
]
`;

exports[`spellEffectsValues > non-scaling value 1`] = `
[
  [
    {
      "base": 50,
      "className": "NonScalingValue",
    },
  ],
]
`;

exports[`spellEffectsValues > only valueless movement 1`] = `
[
  [],
]
`;

exports[`spellEffectsValues > shadow percent damage 1`] = `
[
  [
    {
      "base": 35,
      "className": "DarkSlashValue",
    },
  ],
]
`;

exports[`spellEffectsValues > stat value and nested effectiveness values 1`] = `
[
  [
    {
      "base": 20,
      "className": "Percent5ScaleValue",
    },
  ],
  [
    {
      "base": 30,
      "className": "Percent5ScaleValue",
    },
    {
      "base": 0,
      "className": "Percent5ScaleValue",
    },
  ],
]
`;

exports[`spellEffectsValues > summon values 1`] = `
[
  [
    {
      "base": 70,
      "className": "Percent10ScaleValue",
    },
    {
      "base": 45,
      "className": "MinionAtkValue",
    },
  ],
]
`;
